--- a/module3-document-classification/LS_DS_413_Document_Classification_Assignment.ipynb
+++ b/module3-document-classification/LS_DS_413_Document_Classification_Assignment.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +147,44 @@
        "4  1965  \\nQuite herbal on the nose, with aromas of dri...               1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['clean_descriptions'] = train['description'].apply(lambda x: x[1:-1].replace(',', ' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train['clean_descriptions']\n",
+    "target = train['ratingCategory']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -165,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vect = ...\n",
-    "clf = ...\n",
+    "vect = TfidfVectorizer(stop_words='english', ngram_range=(1,2))\n",
+    "clf = RandomForestClassifier()\n",
     "\n",
     "pipe = Pipeline([('vect', vect), ('clf', clf)])"
    ]
@@ -194,8 +225,17 @@
     "    'clf__max_depth':(5,10,15,20)\n",
     "}\n",
     "\n",
-    "grid_search = GridSearchCV(pipe,parameters, cv=5, n_jobs=4, verbose=1)\n",
-    "grid_search.fit(..., ...)"
+    "grid_search = GridSearchCV(pipe,parameters, cv=5, n_jobs=-1, verbose=1)\n",
+    "grid_search.fit(data, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search.best_score_"
    ]
   },
   {
@@ -238,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subNumber = 0"
+    "subNumber = 2"
    ]
   },
   {
@@ -265,6 +305,16 @@
     "## Challenge\n",
     "\n",
     "You're trying to achieve a minimum of 70% Accuracy on your model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "import spacy"
    ]
   },
   {
@@ -300,15 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lsi = ...\n",
-    "vect = ...\n",
-    "clf = ...\n",
+    "svd = TruncatedSVD(n_components=100, # Just here for demo. \n",
+    "                   algorithm='randomized',\n",
+    "                   n_iter=10)\n",
     "\n",
-    "pipe = Pipeline([('lsi', lsi), ('clf', clf)])"
+    "\n",
+    "lsi = Pipeline([('vect', vect), ('svd', svd)])\n",
+    "pipe = Pipeline([('lsi', lsi), ('clf', clf)])\n"
    ]
   },
   {
@@ -321,18 +373,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  3.0min\n",
+      "[Parallel(n_jobs=-1)]: Done 120 out of 120 | elapsed: 13.0min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=nan,\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('lsi',\n",
+       "                                        Pipeline(memory=None,\n",
+       "                                                 steps=[('vect',\n",
+       "                                                         TfidfVectorizer(analyzer='word',\n",
+       "                                                                         binary=False,\n",
+       "                                                                         decode_error='strict',\n",
+       "                                                                         dtype=<class 'numpy.float64'>,\n",
+       "                                                                         encoding='utf-8',\n",
+       "                                                                         input='content',\n",
+       "                                                                         lowercase=True,\n",
+       "                                                                         max_df=1.0,\n",
+       "                                                                         max_features=None,\n",
+       "                                                                         min_df=1,\n",
+       "                                                                         ngram_range=(1,\n",
+       "                                                                                      2),\n",
+       "                                                                         norm='l2',\n",
+       "                                                                         preprocessor=None,\n",
+       "                                                                         smooth_...\n",
+       "                                                               min_weight_fraction_leaf=0.0,\n",
+       "                                                               n_estimators=100,\n",
+       "                                                               n_jobs=None,\n",
+       "                                                               oob_score=False,\n",
+       "                                                               random_state=None,\n",
+       "                                                               verbose=0,\n",
+       "                                                               warm_start=False))],\n",
+       "                                verbose=False),\n",
+       "             iid='deprecated', n_jobs=-1,\n",
+       "             param_grid={'clf__max_depth': (5, 10, 15, 20),\n",
+       "                         'lsi__svd__n_components': [10, 100, 250],\n",
+       "                         'lsi__vect__max_df': (0.75, 1.0)},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "parameters = {\n",
     "    'lsi__svd__n_components': [10,100,250],\n",
-    "    'vect__max_df': (0.75, 1.0),\n",
+    "    'lsi__vect__max_df': (0.75, 1.0),\n",
     "    'clf__max_depth':(5,10,15,20)\n",
     "}\n",
     "\n",
-    "grid_search = GridSearchCV(pipe,parameters, cv=5, n_jobs=4, verbose=1)\n",
-    "grid_search.fit(..., ...)"
+    "grid_search = GridSearchCV(pipe,parameters, cv=5, n_jobs=-1, verbose=1)\n",
+    "grid_search.fit(data, target)"
    ]
   },
   {
@@ -344,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,11 +543,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_lg')\n",
+    "def get_word_vectors(docs):\n",
+    "    return [nlp(doc).vector for doc in docs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = get_word_vectors(train['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_embed = X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vicktor = TfidfVectorizer(stop_words='english', ngram_range=(1,2), max_features=10000)\n",
+    "X_tfidf = vicktor.fit_transform(train['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>000</th>\n",
+       "      <th>000 bottles</th>\n",
+       "      <th>10</th>\n",
+       "      <th>10 12</th>\n",
+       "      <th>10 year</th>\n",
+       "      <th>10 years</th>\n",
+       "      <th>100</th>\n",
+       "      <th>100 bottles</th>\n",
+       "      <th>100 liter</th>\n",
+       "      <th>100 malted</th>\n",
+       "      <th>...</th>\n",
+       "      <th>zesty orange</th>\n",
+       "      <th>zinfandel</th>\n",
+       "      <th>zing</th>\n",
+       "      <th>zingy</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>zippy</th>\n",
+       "      <th>zuidam</th>\n",
+       "      <th>ànima</th>\n",
+       "      <th>ànima negra</th>\n",
+       "      <th>ìle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 10000 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   000  000 bottles   10  10 12  10 year  10 years  100  100 bottles  \\\n",
+       "0  0.0          0.0  0.0    0.0      0.0       0.0  0.0          0.0   \n",
+       "1  0.0          0.0  0.0    0.0      0.0       0.0  0.0          0.0   \n",
+       "2  0.0          0.0  0.0    0.0      0.0       0.0  0.0          0.0   \n",
+       "3  0.0          0.0  0.0    0.0      0.0       0.0  0.0          0.0   \n",
+       "4  0.0          0.0  0.0    0.0      0.0       0.0  0.0          0.0   \n",
+       "\n",
+       "   100 liter  100 malted  ...  zesty orange  zinfandel  zing  zingy  zip  \\\n",
+       "0        0.0         0.0  ...           0.0        0.0   0.0    0.0  0.0   \n",
+       "1        0.0         0.0  ...           0.0        0.0   0.0    0.0  0.0   \n",
+       "2        0.0         0.0  ...           0.0        0.0   0.0    0.0  0.0   \n",
+       "3        0.0         0.0  ...           0.0        0.0   0.0    0.0  0.0   \n",
+       "4        0.0         0.0  ...           0.0        0.0   0.0    0.0  0.0   \n",
+       "\n",
+       "   zippy  zuidam  ànima  ànima negra  ìle  \n",
+       "0    0.0     0.0    0.0          0.0  0.0  \n",
+       "1    0.0     0.0    0.0          0.0  0.0  \n",
+       "2    0.0     0.0    0.0          0.0  0.0  \n",
+       "3    0.0     0.0    0.0          0.0  0.0  \n",
+       "4    0.0     0.0    0.0          0.0  0.0  \n",
+       "\n",
+       "[5 rows x 10000 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X_tfidf.todense(), columns=vicktor.get_feature_names())\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Continue Word Embedding Work Here\n"
+    "X_embed[:2]"
    ]
   },
   {
@@ -516,20 +877,32 @@
     "\n",
     "1. Research \"Sentiment Analysis\". Provide answers in markdown to the following questions: \n",
     "    - What is \"Sentiment Analysis\"? \n",
+    "    Sentiment analysis is the interpretation and classification of emotions within text data using text analysis techniques.\n",
     "    - Is Document Classification different than \"Sentiment Analysis\"? Provide evidence for your response\n",
+    "    You can use document Classification for Sentiment Analysis but can also use it for any other categories of classification. \n",
     "    - How do create labeled sentiment data? Are those labels really sentiment?\n",
+    "    Define what is 'negative' or 'positive'. Not really.\n",
     "    - What are common applications of sentiment analysis?\n",
+    "    Market research, learning about your competitor, find general perception about your brand, analyze product reviews, and find patterns or trends.\n",
     "2. Research our why word embeddings worked better for the lecture notebook than on the whiskey competition.\n",
     "    - This [text classification documentation](https://developers.google.com/machine-learning/guides/text-classification/step-2-5) from Google might be of interest\n",
-    "    - Neural Networks are becoming more popular for document classification. Why is that the case?"
+    "    - Neural Networks are becoming more popular for document classification. Why is that the case?\n",
+    "     Neural Networks are simple to define and understand, and they take much less compute time than sequence models."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "U4-S1-NLP-DS11",
+   "display_name": "U4-S1-NLP (Python3)",
    "language": "python",
-   "name": "u4-s1-nlp-ds11"
+   "name": "u4-s1-nlp"
   },
   "language_info": {
    "codemirror_mode": {
